--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://github.com/wish1030/Mini-Game"
 }
