--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/wish1030/Mini-Game"
+  "homepage": "https://wish1030.github.io/Mini-Game/"
 }
